CSS tweaks and bugfixes (#54)
- Tweak top-right icon CSS:
  - Add background colour to icons, to make them more visible when overlapping the chart
  - Reduce icon/text size
  - Refactor font-sizing and other CSS settings
- Fix node-list toggle button font-family
- Fix Kedro-UI search width override on 450px-wide screens

--- a/src/components/node-list/node-list.scss
+++ b/src/components/node-list/node-list.scss
@@ -14,7 +14,7 @@
 
   .kui-searchbar,
   .kui-input-wrapper {
-    width: 100%;
+    max-width: none;
   }
 }
 
@@ -62,6 +62,7 @@
   border: none;
   color: inherit;
   font-size: 1.6em;
+  font-family: inherit;
   cursor: pointer;
   opacity: 0.8;
 
